tests/invalid/dict_literal_mixed_key_types/main.py
def run_case() -> None:
    d = {1: 10, "2": 20}
    print(d)


if __name__ == "__main__":
    run_case()
